--- a/flashcard-app/src/app.css
+++ b/flashcard-app/src/app.css
@@ -8,6 +8,41 @@ body {
     margin: 1rem 2rem;
 }
 
+.header {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    flex-wrap: wrap;
+    background-color: white;
+    padding: 0 1.5rem;
+    box-shadow: 0 0 5px 2px rgba(0, 0, 0, 0.3);
+}
+
+.form-group {
+    display: flex;
+    flex-direction: column;
+    margin: 0.5rem;
+}
+
+.btn {
+    background-color: hsl(200, 100%, 50%);
+    color: white;
+    padding: 0.5em 1em;
+    border-radius: 0.3em;
+    border: none;
+    cursor: pointer;
+}
+
+.btn:hover {
+    background-color: hsl(200, 100%, 40%);
+}
+
+.form-group > label {
+    color: #777;
+    font-size: 0.75rem;
+    margin-bottom: 0.25rem;
+}
+
 .card-grid {
     display: grid;
     align-items: center;
